Fixed up template UI and make it responsive to different view sizes

--- a/components/breads.html
+++ b/components/breads.html
@@ -7,9 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body class="no-bake">
+<a class="btn download-link" href="../index.html">Back to Home</a>
+<div class="page-wrapper">
+    <header>
+        <h1>Bread Recipes</h1>
+        <h3>My favorite recipes deal with kneading bread.  Have some fun with some dough in these recipes.</h3>
+    </header>
+
+    <main>
+
+        <section>
+            <h2>Table of Contents</h2>
+            <div id="nobakeDataDisplay">
+
+            </div>
+            <script src="nobake.js"></script>
+        </section>
+
+    </main>
+</div>
 
 </body>
 </html>
