--- a/components/nobake.html
+++ b/components/nobake.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 
     <script>
@@ -17,26 +18,95 @@
 
 </head>
 <body class="no-bake">
+    <a class="btn download-link" href="../index.html">Back to Home</a>
     <div class="page-wrapper">
         <header>
             <h1>No Bake Recipes</h1>
+            <p>These recipes do not require the oven or stove to make.  This is usually recipes that take under 30 minutes to make and are good snacks.</p>
         </header>
 
-        <main>
-            <section>
-                <p>These recipes do not require the oven or stove to make.  This is usually recipes that take under 30 minutes to make and are good snacks.</p>
-            </section>
+        <main class="no-bake-wrapper">
 
-            <section>
-                <h2>Table of Contents</h2>
-                <div id="nobakeDataDisplay">
+            <button onclick="sortList()">Sort</button>
 
-                </div>
-                <script src="nobake.js"></script>
+
+
+            <section class="no-bake-list">
+                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for recipes.." title="Type in a name">
+
+                <ul id="myUL">
+                    <li><a href="#">Chia Seed Pudding</a></li>
+                    <li><a href="#">Cornflake Christmas Wreaths</a></li>
+
+                    <li><a href="#">Crunch Truffles</a></li>
+                    <li><a href="#">Granola Bars</a></li>
+
+                    <li><a href="#">Granola</a></li>
+                    <li><a href="#">Healthy Twix Bars</a></li>
+                    <li><a href="#">Protein Balls</a></li>
+
+                    <li><a href="#">Matcha Latte</a></li>
+                    <li><a href="#">Matcha Peanut Butter Cups</a></li>
+
+                    <li><a href="#">Matcha Ice Cream</a></li>
+                    <li><a href="#">Sorbet Base</a></li>
+
+                </ul>
             </section>
 
         </main>
     </div>
+
+    <script>
+        function myFunction() {
+            var input, filter, ul, li, a, i, txtValue;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            ul = document.getElementById("myUL");
+            li = ul.getElementsByTagName("li");
+            for (i = 0; i < li.length; i++) {
+                a = li[i].getElementsByTagName("a")[0];
+                txtValue = a.textContent || a.innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
+        }
+
+        function sortList() {
+            var list, i, switching, b, shouldSwitch;
+            list = document.getElementById("id01");
+            switching = true;
+            /* Make a loop that will continue until
+            no switching has been done: */
+            while (switching) {
+                // Start by saying: no switching is done:
+                switching = false;
+                b = list.getElementsByTagName("LI");
+                // Loop through all list items:
+                for (i = 0; i < (b.length - 1); i++) {
+                    // Start by saying there should be no switching:
+                    shouldSwitch = false;
+                    /* Check if the next item should
+                    switch place with the current item: */
+                    if (b[i].innerHTML.toLowerCase() > b[i + 1].innerHTML.toLowerCase()) {
+                        /* If next item is alphabetically lower than current item,
+                        mark as a switch and break the loop: */
+                        shouldSwitch = true;
+                        break;
+                    }
+                }
+                if (shouldSwitch) {
+                    /* If a switch has been marked, make the switch
+                    and mark the switch as done: */
+                    b[i].parentNode.insertBefore(b[i + 1], b[i]);
+                    switching = true;
+                }
+            }
+        }
+    </script>
 
 </body>
 </html>
