--- a/components/sweets.html
+++ b/components/sweets.html
@@ -7,9 +7,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
+<body class="no-bake">
+<a class="btn download-link" href="../index.html">Back to Home</a>
+<div class="page-wrapper">
+    <header>
+        <h1>Sweet Tooth Recipes</h1>
+        <h3>Always craving something sweet?  Here are the recipes for you! :)  Settle that sweet tooth with my recipes below.</h3>
+    </header>
+
+    <main>
+
+        <section>
+            <h2>Table of Contents</h2>
+            <div id="nobakeDataDisplay">
+
+            </div>
+            <script src="nobake.js"></script>
+        </section>
+
+    </main>
+</div>
 
 </body>
 </html>
