Adding in recipes, editted the search bar UI

--- a/components/nobake.html
+++ b/components/nobake.html
@@ -10,14 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 
-    <script>
-
-
-
-    </script>
-
 </head>
-<body class="no-bake">
+<body class="category-wrapper">
     <a class="btn download-link" href="../index.html">Back to Home</a>
     <div class="page-wrapper">
         <header>
@@ -32,24 +26,26 @@
 
 
             <section class="no-bake-list">
-                <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for recipes.." title="Type in a name">
+                <div class="category-input">
+                    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for recipes.." title="Type in a name">
+                </div>
 
                 <ul id="myUL">
-                    <li><a href="#">Chia Seed Pudding</a></li>
-                    <li><a href="#">Cornflake Christmas Wreaths</a></li>
+                    <li><a href="../recipes">Chia Seed Pudding</a></li>
+                    <li><a href="../recipes/cornflake-wreath.html">Cornflake Christmas Wreaths</a></li>
 
-                    <li><a href="#">Crunch Truffles</a></li>
-                    <li><a href="#">Granola Bars</a></li>
+                    <li><a href="../recipes">Crunch Truffles</a></li>
+                    <li><a href="../recipes">Granola Bars</a></li>
 
-                    <li><a href="#">Granola</a></li>
-                    <li><a href="#">Healthy Twix Bars</a></li>
-                    <li><a href="#">Protein Balls</a></li>
+                    <li><a href="../recipes">Granola</a></li>
+                    <li><a href="../recipes">Healthy Twix Bars</a></li>
+                    <li><a href="../recipes/protein-balls.html">Protein Balls</a></li>
 
-                    <li><a href="#">Matcha Latte</a></li>
-                    <li><a href="#">Matcha Peanut Butter Cups</a></li>
+                    <li><a href="../recipes">Matcha Latte</a></li>
+                    <li><a href="../recipes">Matcha Peanut Butter Cups</a></li>
 
-                    <li><a href="#">Matcha Ice Cream</a></li>
-                    <li><a href="#">Sorbet Base</a></li>
+                    <li><a href="../recipes">Matcha Ice Cream</a></li>
+                    <li><a href="../recipes">Sorbet Base</a></li>
 
                 </ul>
             </section>
