Almost all recipes added into the folder

--- a/components/breads.html
+++ b/components/breads.html
@@ -28,12 +28,12 @@
                 </div>
 
                 <ul id="myUL">
-                    <li><a href="../recipes">Banana Bread 1</a></li>
-                    <li><a href="../recipes">Banana Bread 2</a></li>
+                    <li><a href="../recipes/banana-bread-1.html">Banana Bread 1</a></li>
+                    <li><a href="../recipes/banana-bread-2.html">Banana Bread 2</a></li>
                     <li><a href="../recipes/biscuits.html">Biscuits</a></li>
                     <li><a href="../recipes">Bagel</a></li>
-                    <li><a href="../recipes">Healthy Cinnamon Rolls</a></li>
-                    <li><a href="../recipes">Pop-Over Bread</a></li>
+                    <li><a href="../recipes/healthy-cinnamon-rolls.html">Healthy Cinnamon Rolls</a></li>
+                    <li><a href="../recipes/pop-over-bread.html">Pop-Over Bread</a></li>
                     <li><a href="../recipes/ube-mochi.html">Ube Mochi Bread</a></li>
                 </ul>
             </section>
