--- a/components/nobake.html
+++ b/components/nobake.html
@@ -31,21 +31,23 @@
                 </div>
 
                 <ul id="myUL">
-                    <li><a href="../recipes">Chia Seed Pudding</a></li>
+                    <li><a href="../recipes/homemade-caramel.html">Caramel</a></li>
+                    <li><a href="../recipes/chia-seed-pudding.html">Chia Seed Pudding</a></li>
                     <li><a href="../recipes/cornflake-wreath.html">Cornflake Christmas Wreaths</a></li>
 
-                    <li><a href="../recipes">Crunch Truffles</a></li>
-                    <li><a href="../recipes">Granola Bars</a></li>
+                    <li><a href="../recipes/crunch-truffles.html">Crunch Truffles</a></li>
+                    <li><a href="../recipes/disneyland-churros.html">Disneyland Churros</a></li>
+                    <li><a href="../recipes/trail-mix-granola-bars.html">Granola Bars</a></li>
 
-                    <li><a href="../recipes">Granola</a></li>
-                    <li><a href="../recipes">Healthy Twix Bars</a></li>
+                    <li><a href="../recipes/granola.html">Granola</a></li>
+                    <li><a href="../recipes/healthy-twix-bars.html">Healthy Twix Bars</a></li>
                     <li><a href="../recipes/protein-balls.html">Protein Balls</a></li>
 
-                    <li><a href="../recipes">Matcha Latte</a></li>
-                    <li><a href="../recipes">Matcha Peanut Butter Cups</a></li>
+                    <li><a href="../recipes/matcha-latte.html">Matcha Latte</a></li>
+                    <li><a href="../recipes/matcha-pb-cups.html">Matcha Peanut Butter Cups</a></li>
 
-                    <li><a href="../recipes">Matcha Ice Cream</a></li>
-                    <li><a href="../recipes">Sorbet Base</a></li>
+                    <li><a href="../recipes/matcha-ice-cream.html">Matcha Ice Cream</a></li>
+                    <li><a href="../recipes/sorbet-base.html">Sorbet Base</a></li>
 
                 </ul>
             </section>
