--- a/components/sweets.html
+++ b/components/sweets.html
@@ -32,19 +32,15 @@
                 <ul id="myUL">
                     <li><a href="../recipes/apple-pie.html">Apple Pie</a></li>
                     <li><a href="../recipes/banana-muffins.html">Banana Muffins</a></li>
-                    <li><a href="../recipes">Black Sesame Mochi Cake</a></li>
-                    <li><a href="../recipes">Bread Pudding Sweet Rolls</a></li>
-                    <li><a href="../recipes">Caramel</a></li>
-                    <li><a href="../recipes">Chocolate Brownies</a></li>
-                    <li><a href="../recipes">Disneyland Churros</a></li>
-                    <li><a href="../recipes">Mirror Glaze Cake</a></li>
-                    <li><a href="../recipes">Matcha White Chocolate Chip Scones</a></li>
-                    <li><a href="../recipes">Matcha Glazed Donuts</a></li>
-                    <li><a href="../recipes">Gluten-Free Oatmeal Cookies</a></li>
-                    <li><a href="../recipes">Peanut Butter Cookies</a></li>
-                    <li><a href="../recipes">Gluten-Free & Sugar-Free Peanut Butter Cookies</a></li>
+                    <li><a href="../recipes/sesame-mochi-cake.html">Black Sesame Mochi Cake</a></li>
+                    <li><a href="../recipes/bread-pudding-sweet-rolls.html">Bread Pudding Sweet Rolls</a></li>
+                    <li><a href="../recipes/mirror-glaze-cake.html">Mirror Glaze Cake</a></li>
+                    <li><a href="../recipes/matcha-scones.html">Matcha White Chocolate Chip Scones</a></li>
+                    <li><a href="../recipes/matcha-glazed-donuts.html">Matcha Glazed Donuts</a></li>
+                    <li><a href="../recipes/gf-oatmeal-cookies.html">Gluten-Free Oatmeal Cookies</a></li>
+                    <li><a href="../recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
                     <li><a href="../recipes/pumpkin-bp.html">Pumpkin Praline Bread Pudding</a></li>
-                    <li><a href="../recipes">Vegan Chocolate Cake</a></li>
+                    <li><a href="../recipes/vegan-chocolate-cake.html">Vegan Chocolate Cake</a></li>
                 </ul>
             </section>
 
