--- a/components/savory.html
+++ b/components/savory.html
@@ -32,7 +32,7 @@
                 <ul id="myUL">
                     <li><a href="../recipes">Ground Turkey Burger</a></li>
                     <li><a href="../recipes">Portuguese Bean Soup</a></li>
-                    <li><a href="../recipes">The Perfect Steak</a></li>
+                    <li><a href="../recipes/perfect-steak.html">The Perfect Steak</a></li>
                 </ul>
             </section>
 
