--- a/components/savory.html
+++ b/components/savory.html
@@ -30,9 +30,10 @@
                 </div>
 
                 <ul id="myUL">
-                    <li><a href="../recipes">Ground Turkey Burger</a></li>
-                    <li><a href="../recipes">Portuguese Bean Soup</a></li>
+                    <li><a href="../recipes/turkey-burger.html">Ground Turkey Burger</a></li>
+                    <li><a href="../recipes/portuguese-soup.html">Portuguese Bean Soup</a></li>
                     <li><a href="../recipes/perfect-steak.html">The Perfect Steak</a></li>
+                    <li><a href="../recipes/crispy-potato-bites.html">Crispy Potato Bites</a></li>
                 </ul>
             </section>
 
