Added in sugar cookie recipe

--- a/components/sweets.html
+++ b/components/sweets.html
@@ -41,6 +41,7 @@
                     <li><a href="../recipes/peanut-butter-cookies.html">Peanut Butter Cookies</a></li>
                     <li><a href="../recipes/pumpkin-bp.html">Pumpkin Praline Bread Pudding</a></li>
                     <li><a href="../recipes/vegan-chocolate-cake.html">Vegan Chocolate Cake</a></li>
+                    <li><a href="../recipes/sugar-cookie.html">Sugar Cookies</a></li>
                 </ul>
             </section>
 
